Adicionando css a nav Projetos

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 680px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="..." class="img-fluid rounded-start" alt="...">
@@ -138,10 +138,10 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">Skedoo</h5>
-              <p class="card-text">Skedoo é uma plataforma para auxiliar no gerenciamento da escola infantil, e substituição da antiga agenda escolar, com três grau de acesso, possuindo Chat em tempo real, Agenda com visualização em todos os acessos, adição do cardápio e muito mais. <br>
+              <p class="card-text">Skedoo é uma plataforma para auxiliar no gerenciamento da escola infantil, e substituto da antiga agenda escolar, com três grau de acesso, possuindo Chat em tempo real, Agenda com visualização em todos os acessos, adição do cardápio e muito mais. <br>
                 Este projeto foi o de Conclusão de curso na ETEC-Ruth Cardoso, elaborado em equipe.
               </p>
-              <div class="container">
+              <div class="card-link">
                 <a href="#"><p>Código</p></a>
                 <a href="#"><p>Site</p></a>
               </div>              
@@ -159,7 +159,7 @@
         </div>
       </div>
 
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="card mb-3" style="max-width: 680px; margin-bottom: 10px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="..." class="img-fluid rounded-start" alt="...">
@@ -168,11 +168,11 @@
             <div class="card-body">
               <h5 class="card-title">Pokemeth</h5>
               <p class="card-text">Pokemeth é um site criado para diversão dos que curtiram o desenho. Elaborado para aperfeiçoar os conhecimento, onde é possível realizar adição de cards, batalhas, e consultas na API pokedex</p>
-              <p class="card-text"><small class="text-muted">
-                <div>
+                <div class="card-link">
                   <a href="#"><p>Código</p></a>
                   <a href="#"><p>Site</p></a>
-                </div>    
+                </div>
+                <p class="card-text"><small class="text-muted">    
                 <ul class="conj-icones">
                   <li><img class="icon-programacao" src="img/html.png" alt="Html"></li>
                   <li><img class="icon-programacao" src="img/css.png" alt="Css"></li>
@@ -186,7 +186,7 @@
         </div>
 
           <div class="col-6">
-      <div class="card mb-3 " style="max-width: 540px;">
+      <div class="card mb-3 " style="max-width: 680px; margin-bottom: 10px">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="..." class="img-fluid rounded-start" alt="...">
@@ -195,11 +195,11 @@
             <div class="card-body">
               <h5 class="card-title">Bora lá</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">
-                <div>
+                <div class="card-link">
                   <a href="#"><p>Código</p></a>
                   <a href="#"><p>Site</p></a>
-                </div>    
+                </div>
+                <p class="card-text"><small class="text-muted">    
                 <ul class="conj-icones">
                   <li><img class="icon-programacao" src="img/html.png" alt="Html"></li>
                   <li><img class="icon-programacao" src="img/css.png" alt="Css"></li>
@@ -213,7 +213,7 @@
         </div>
       </div>
 
-      <div class="card mb-3 " style="max-width: 540px;">
+      <div class="card mb-3 " style="max-width: 680px; margin-bottom: 10px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="..." class="img-fluid rounded-start" alt="...">
@@ -229,6 +229,13 @@
       </div>
     </div>
     </div>
+    </div>
+
+
+    <div class="ver-mais">
+      <button>
+      <a href="https://github.com/MatheusReis97"><p>Ver Mais</p></a>
+    </button>
     </div>
 </nav>
 
