--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
-          <li><a class="nav-link" aria-current="page" href="#">HOME</a></li>
-          <li><a class="nav-link" href="#">SOBRE MIM</a></li>
-          <li><a class="nav-link" href="#">SKILLS</a></li>
-          <li><a class="nav-link" href="#">PROJETOS</a></li>
-          <li><a class="nav-link" href="#">CONTATOS</a></li>
+          <li><a class="nav-link" aria-current="page" href="#inicio">HOME</a></li>
+          <li><a class="nav-link" href="#sobremim">SOBRE MIM</a></li>
+          <li><a class="nav-link" href="#skill">SKILLS</a></li>
+          <li><a class="nav-link" href="#projetos">PROJETOS</a></li>
+          <li><a class="nav-link" href="#contato">CONTATOS</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- Fim navBar -->
- <nav>
+ <nav id="inicio">
  <div class="apresentacao">
   <div class="container">
   <h2>Olà,<br>
@@ -47,7 +47,7 @@
 <hr class="linha-separacao">
 <br>
 
-<nav class="sobremim">
+<nav class="sobremim" id="sobremim">
     <h3 class="titulo">SOBRE MIM</h3>
     <br>  
     <div class="container">
@@ -69,7 +69,7 @@
 <hr class="linha-separacao">
 <br>
 
-<nav class="skill">
+<nav class="skill"  id="skill">
   <h3 class="titulo">SKILLS</h3>
   <br>  
   <div class="container">
@@ -123,7 +123,7 @@
 <hr class="linha-separacao">
 <br>
 
-<nav class="projetos">
+<nav class="projetos"  id="projetos">
   <div>
     <h3 class="titulo">PROJETOS</h3>
   </div><br>
@@ -243,7 +243,7 @@
 <hr class="linha-separacao">
 <br>
 
-<nav class="contato">
+<nav class="contato"  id="contato">
     <h3 class="titulo">CONTATO</h3>
     <br>  
     <div class="container">
