adc correcao sobre-mim

--- a/index.html
+++ b/index.html
@@ -51,18 +51,15 @@
     <h3 class="titulo">SOBRE MIM</h3>
     <br>  
     <div class="container">
-    <div class="row">
-    <div class="minha-imagem col ">
-     <img src="img/lebron.jpg" alt="Será EU">
-    </div>
-    <div class=" col-6 sobre-texto">
-      <p>Me chamo Matheus Reis, sou de Santos-SP, tenho 26 anos, atualmente buscando uma vaga para desenvolver meus conhecimento e colocar em pratica o que tenho aprendido.</p>
-
-      <p>Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso técnico em desenvolvimento de sistemas, o que me proporcionou uma base nessa área.</p>
-
-      <p>Programação pra mim é entusiamante, me encontrei nessa área e busco me aprimorar a cada dia. Estou pronto para enfrentar desafios, colaborar em equipe e contribuir para o desenvolvimento de projetos inovadores.</p>
-            </div>
-        </div>
+    <div class=" sobre-texto">
+        <div class="minha-imagem">
+        <img class="imagem-perfil" src="img/foto-perfil.png" alt="Será EU">
+        </div> <br>
+      <p>Me chamo <strong>Matheus Reis</strong>, sou de Santos-SP, tenho 26 anos, atualmente <strong>buscando uma vaga para desenvolver meus conhecimento e colocar em pratica o que tenho aprendido</strong>. <br>
+         Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso <strong>técnico em desenvolvimento de sistemas</strong>, o que me proporcionou uma base nessa área. <br>
+         Programação pra mim é entusiamante, me encontrei nessa área e  <strong>busco me aprimorar a cada dia</strong>. <br>
+          Estou pronto para enfrentar desafios, colaborar em equipe e contribuir para o desenvolvimento de projetos inovadores.</p>
+      </div>
     </div>
 </nav>
 
@@ -252,9 +249,10 @@
      <p>Agradeço sua visita ao meu Portífolio. Espero que tenha gostado. Para entrar em contato, aqui estão as opções disponíveis.
         Atenciosamente,</p>
 
-          <a href="https://www.linkedin.com/in/matheus-reis-668b10215/"><img src="img/linkedin.png" alt="Linkedin"></a>
+          <a href="https://www.linkedin.com/in/matheus-reis-668b10215/"><img src="img/linkedin.png" alt="Linkedin" style="width: 50%;"></a>
     </div>
     <div class=" col-6 sobre-texto">
+      
       <form action="" method="get">
         <input type="text" placeholder="Nome">
         <input type="tel" placeholder="Telefone">
