--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portífolio MR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- navBar -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" width="35%"></a>
+      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" width="28%"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,17 +44,17 @@
  </div>
 </nav>
 
-<hr class="linha-separacao">
+<hr class="linha-separacao" id="sobremim">
 <br>
 
-<nav class="sobremim" id="sobremim">
+<nav class="sobremim" >
     <h3 class="titulo">SOBRE MIM</h3>
     <br>  
     <div class="container">
     <div class=" sobre-texto">
         <div class="minha-imagem">
         <img class="imagem-perfil" src="img/foto-perfil.png" alt="Será EU">
-        </div> <br>
+        </div>
       <p>Me chamo <strong>Matheus Reis</strong>, sou de Santos-SP, tenho 26 anos, atualmente <strong>buscando uma vaga para desenvolver meus conhecimento e colocar em pratica o que tenho aprendido</strong>. <br>
          Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso <strong>técnico em desenvolvimento de sistemas</strong>, o que me proporcionou uma base nessa área. <br>
          Programação pra mim é entusiamante, me encontrei nessa área e  <strong>busco me aprimorar a cada dia</strong>. <br>
@@ -62,11 +62,11 @@
       </div>
     </div>
 </nav>
-
-<hr class="linha-separacao">
+<br>
+<hr class="linha-separacao" id="skill">
 <br>
 
-<nav class="skill"  id="skill">
+<nav class="skill"  >
   <h3 class="titulo">SKILLS</h3>
   <br>  
   <div class="container">
@@ -117,10 +117,10 @@
   </div>
 </nav>
 
-<hr class="linha-separacao">
+<hr class="linha-separacao"  id="projetos">
 <br>
 
-<nav class="projetos"  id="projetos">
+<nav class="projetos" >
   <div>
     <h3 class="titulo">PROJETOS</h3>
   </div><br>
@@ -237,10 +237,10 @@
 </nav>
 
 
-<hr class="linha-separacao">
+<hr class="linha-separacao" id="contato">
 <br>
 
-<nav class="contato"  id="contato">
+<nav class="contato"  >
     <h3 class="titulo">CONTATO</h3>
     <br>  
     <div class="container">
@@ -254,12 +254,16 @@
     <div class=" col-6 sobre-texto">
       
       <form action="" method="get">
-        <input type="text" placeholder="Nome">
-        <input type="tel" placeholder="Telefone">
-        <input type="email" placeholder="E-mail">
-        <input type="textarea">
-        <button type="button">Enviar</button>
-        </form>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Área da Mensagem</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="button"  class="btn btn-dark">Enviar</button>
+        </form> 
             </div>
         </div>
     </div>
