--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div class="minha-imagem">
         <img class="imagem-perfil" src="img/foto-perfil.png" alt="Será EU">
         </div>
-      <p>Me chamo <strong>Matheus Reis</strong>, sou de Santos-SP, tenho 26 anos, atualmente <strong>buscando uma vaga para desenvolver meus conhecimento e colocar em pratica o que tenho aprendido</strong>. <br>
-         Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso <strong>técnico em desenvolvimento de sistemas</strong>, o que me proporcionou uma base nessa área. <br>
+      <p>Me chamo <strong>Matheus Reis</strong>, sou de Santos-SP, tenho 27 anos, atualmente <strong>buscando uma vaga para desenvolver meus conhecimento e colocar em pratica o que tenho aprendido</strong>. <br>
+         Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso <strong>técnico em desenvolvimento de sistemas</strong>, o que me proporcionou uma base nessa área e atualmente faço Analíse e Desenvolvimento de sistema na Universidade Santa Cecília<br>
          Programação pra mim é entusiamante, me encontrei nessa área e  <strong>busco me aprimorar a cada dia</strong>. <br>
           Estou pronto para enfrentar desafios, colaborar em equipe e contribuir para o desenvolvimento de projetos inovadores.</p>
       </div>
@@ -76,31 +76,31 @@
     <br>
     <p>HTML</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 68%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 58%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>CSS</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 58%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 48%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>JAVASCRIPT</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 58%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 48%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>PHP</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 65%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>MYSQL</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 65%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>LARAVEL</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 78%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 58%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>REACT</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 58%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 38%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
     
   </div>
