melhoria-area-contato
Adicionando melhores estilos

--- a/index.html
+++ b/index.html
@@ -249,11 +249,14 @@
      <p>Agradeço sua visita ao meu Portífolio. Espero que tenha gostado. Para entrar em contato, aqui estão as opções disponíveis.
         Atenciosamente,</p>
 
-          <a href="https://www.linkedin.com/in/matheus-reis-668b10215/"><img src="img/linkedin.png" alt="Linkedin" style="width: 50%;"></a>
+  
     </div>
     <div class=" col-6 sobre-texto">
-      
       <form action="" method="get">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Nome</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Informe seu Nome">
+        </div>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Email</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -268,13 +271,14 @@
         </div>
     </div>
 </nav>
-
+<br>
 
    <footer>
         <div class="container">
             <div class="social-icons">
-              <a href="https://www.linkedin.com/in/matheus-reis-668b10215/" class="icon-link"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/matheus-reis-668b10215/" class="icon-link"><i class="fa fa-linkedin" style="width: 50px;"></i></a>
                 <a href="https://github.com/MatheusReis97" class="icon-link"><i class="fa fa-github"></i></a>
+                
             </div>
         </div>
     </footer>
