--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
    <footer>
         <div class="container">
             <div class="social-icons">
-              <a href="https://www.linkedin.com/in/matheus-reis-668b10215/" class="icon-link"><i class="fa fa-linkedin" style="width: 50px;"></i></a>
-                <a href="https://github.com/MatheusReis97" class="icon-link"><i class="fa fa-github"></i></a>
-                
-            </div>
+              <a href="https://www.linkedin.com/in/matheus-reis-668b10215/" class="icon-link"><i class="fa fa-linkedin"></i></a>
+                <a href="https://github.com/MatheusReis97" class="icon-link"><i class="fa fa-github"></i></a> <br><br>
+                <p>"© 2024 Matheus Reis. Todos os direitos reservados."</p>
+            </div>  
         </div>
     </footer>
 
