Melhoria-do-Formulário
Adic, envio para email, na serie de contato.

--- a/index.html
+++ b/index.html
@@ -252,20 +252,20 @@
   
     </div>
     <div class=" col-6 sobre-texto">
-      <form action="" method="get">
+      <form action="https://formsubmit.co/ajax/d0a9a4a11cd074cfe746eaf38688568d" method="post">
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Nome</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Informe seu Nome">
+          <input type="text" class="form-control" id="nome" placeholder="Informe seu Nome" required>
         </div>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Email</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
         </div>
         <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label">Área da Mensagem</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="form-control" name="mensagem" id="mensagem" required></textarea>
         </div>
-        <button type="button"  class="btn btn-dark">Enviar</button>
+        <button type="submit"  class="btn btn-dark">Enviar</button>
         </form> 
             </div>
         </div>
