--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img class="imagem-perfil" src="img/foto-perfil.png" alt="Será EU">
         </div>
       <p>Me chamo <strong>Matheus Reis</strong>, sou de Santos-SP, tenho 27 anos, atualmente <strong>buscando uma vaga para desenvolver meus conhecimento e colocar em pratica o que tenho aprendido</strong>. <br>
-         Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso <strong>técnico em desenvolvimento de sistemas</strong>, o que me proporcionou uma base nessa área e atualmente faço Analíse e Desenvolvimento de sistema na Universidade Santa Cecília<br>
+         Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso técnico em desenvolvimento de sistemas</strong>, o que me proporcionou uma base nessa área <strong>e atualmente faço Analíse e Desenvolvimento de sistema na Universidade Santa Cecília.</strong><br>
          Programação pra mim é entusiamante, me encontrei nessa área e  <strong>busco me aprimorar a cada dia</strong>. <br>
           Estou pronto para enfrentar desafios, colaborar em equipe e contribuir para o desenvolvimento de projetos inovadores.</p>
       </div>
@@ -130,7 +130,7 @@
       <div class="card mb-3" style="max-width: 680px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="..." class="img-fluid rounded-start" alt="...">
+            <img src="img/Skedoo.png" class="img-fluid rounded-start" alt="logo">
           </div class="col">
           <div class="col-md-8">
             <div class="card-body">
@@ -139,8 +139,8 @@
                 Este projeto foi o de Conclusão de curso na ETEC-Ruth Cardoso, elaborado em equipe.
               </p>
               <div class="card-link">
-                <a href="#"><p>Código</p></a>
-                <a href="#"><p>Site</p></a>
+                <a href="https://github.com/MatheusReis97/Skedoo_TCC"><p>Código</p></a>
+                <a href="https://drive.google.com/file/d/1DBAYkA6wOqeF2GK76amZQlqKPr2QMNnD/view?usp=sharing" target="_blank"><p>Vídeo</p></a>
               </div>              
               <p class="card-text"><small class="text-muted">
                 <ul class="conj-icones">
