--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
               <p class="card-text">
                 PokeCombaT é um site criado para a diversão dos fãs do desenho Pokémon. Desenvolvido para aprimorar meus conhecimentos, o site permite a adição de cards, batalhas emocionantes e consultas à API da Pokédex.</p>
                 <div class="card-link">
-                  <a href="#"><p>Código</p></a>
-                  <a href="#"><p>Site</p></a>
+                  <a href="https://github.com/MatheusReis97/PokeCombat"><p>Código</p></a>
+                  <a href="https://matheusreis97.github.io/PokeCombat/"><p>Site</p></a>
                 </div>
                 <div class="conj-div">
                 
