--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
     </div><br>
     <p>PHP</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 55%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 48%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>MYSQL</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 55%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 48%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>LARAVEL</p>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 48%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 38%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
     </div><br>
     <p>REACT</p>
     <div class="progress">
@@ -163,7 +163,7 @@
                 PokeCombaT é um site criado para a diversão dos fãs do desenho Pokémon. Desenvolvido para aprimorar meus conhecimentos, o site permite a adição de cards, batalhas emocionantes e consultas à API da Pokédex.</p>
                 <div class="card-link">
                   <a href="https://github.com/MatheusReis97/PokeCombat"><p>Código</p></a>
-                  <a href="https://matheusreis97.github.io/PokeCombat/"><p>Site</p></a>
+                  <a href="https://matheusreis97.github.io/PokeCombat/" target="_blank"><p>Site</p></a>
                 </div>
                 <div class="conj-div">
                 
