--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  <nav id="inicio">
   <div class="apresentacao">
     <h1>Olà,<br>
-    Sou Matheus<br>
+    Sou Matheus Reis<br>
     Desenvolvedor Back-End</h1>
   
  <div class="imagens">
@@ -57,8 +57,7 @@
         </div>
       <p>Me chamo <strong>Matheus Reis</strong>, sou de Santos-SP, tenho 27 anos, atualmente <strong>buscando uma vaga para desenvolver meus conhecimento e colocar em pratica o que tenho aprendido</strong>. <br>
          Desde 2022, venho me dedicando aos estudos de programação, tendo realizado o curso técnico em desenvolvimento de sistemas</strong>, o que me proporcionou uma base nessa área <strong>e atualmente faço Analíse e Desenvolvimento de sistema na Universidade Santa Cecília.</strong><br>
-         Programação pra mim é entusiamante, me encontrei nessa área e  <strong>busco me aprimorar a cada dia</strong>. <br>
-          Estou pronto para enfrentar desafios, colaborar em equipe e contribuir para o desenvolvimento de projetos inovadores.</p>
+         Programação pra mim é entusiamante, me encontrei nessa área e  <strong>busco me aprimorar a cada dia.</strong> Estou pronto para enfrentar desafios, colaborar em equipe e contribuir para o desenvolvimento de projetos inovadores.</p>
       </div>
     </div>
 </nav>
@@ -102,11 +101,11 @@
   </div>
   <div class=" col">
     <h4 class="sub-skill">Soft Skills</h4><br>
-    <p class="soft-skills">Habilidades de comunicação</p> <br>
-    <p class="soft-skills">Trabalho em equipe</p> <br>
-    <p class="soft-skills">Adaptabilidade</p> <br>
     <p class="soft-skills">Criatividade</p> <br>
+    <p class="soft-skills">Adaptabilidade</p> <br>
+    <p class="soft-skills">Trabalho em equipe</p> <br>
     <p class="soft-skills">Resolução de problemas</p> <br>
+    <p class="soft-skills">Habilidades de comunicação</p> <br>
     <p class="soft-skills">Capacidade de aprendizado contínuo</p> <br>
           </div>
       </div>
