Style: Correção no responsivo, Fontes e tamanhos de imagem e texto

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="container">
     <div class="sobre-texto">
         <div class="minha-imagem">
-        <img class="imagem-perfil" src="img/foto-perfil.png" alt="Será EU">
+        <img class="imagem-perfil" src="img/foto-perfil.png" alt="Matheus Reis">
         </div>
         <p style="text-align: center;">
          Me chamo Matheus Reis, tenho 28 anos,  <strong>atualmente buscando uma vaga para desenvolver meus conhecimentos e colocar em prática o que tenho aprendido.</strong> <br></p>
