Fix : correção nas imagens e icones no deploy

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
    <footer>
         <div class="container">
             <div class="social-icons">
-                <p>"© 2024 / Matheus Reis / Todos os direitos reservados."</p>
+                <p>"© 2024 / Matheus Reis / Todos os direitos reservados"</p>
             </div>  
         </div>
     </footer>
