Fix: Corrigindo icones deploy

--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@
               </p>
               
               <div class="card-link">
-                <a href="https://github.com/MatheusReis97/bairro-melhor"><img src="img/icones/icon-github.png" target="_blank" alt="Github" title="Github"></a>
+                <a href="https://github.com/MatheusReis97/bairro-melhor">
+                  <img src="img/icones/icon-github.png"  alt="Github" title="Github">
+                </a>
               </div>              
               <div class="conj-div">
                 <button type="button" class="btn btn-outline-dark" style="border: none;">HTML</button>
