--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
               </p>
               
               <div class="card-link">
-                <a href="https://github.com/MatheusReis97/Skedoo_TCC"><img src="/img/icones/icon-github.png" target="_blank" alt="Github" title="Github"></a>
+                <a href="https://github.com/MatheusReis97/Skedoo_TCC">
+                  <img src="img/icones/icon-github.png"  alt="Github" title="Github">
+                </a>
                 <a href="https://drive.google.com/file/d/1DBAYkA6wOqeF2GK76amZQlqKPr2QMNnD/view?usp=sharing" target="_blank" title="Apresentação" ><i class="fa-solid fa-play"></i></a>
               </div>          
               <div class="conj-div">
