Fix: Corrigindo icones deploy

--- a/index.html
+++ b/index.html
@@ -249,9 +249,7 @@
               </p>
               
               <div class="card-link">
-                <a href="https://github.com/MatheusReis97/PokeCombat">
-                  <img src="img/icones/icon-github.png" alt="Github" title="Github">
-                </a>
+                <a href="https://github.com/MatheusReis97/PokeCombat"><img src="img/icones/icon-github.png" alt="Github" title="Github"></a>
                 <a href="https://matheusreis97.github.io/PokeCombat/" target="_blank"><i class="fa-solid fa-globe"></i> </a>
               </div>              
               <div class="conj-div">
